# docs/swagger.json
@@ -30,7 +30,7 @@
                 "tags": [
                     "install kubernetes master"
                 ],
-                "summary": "install kubernets",
+                "summary": "install kubernetes",
                 "parameters": [
                     {
                         "description": "install kubernetes master",
@@ -38,7 +38,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.InstallKubernetesParameter"
+                            "$ref": "#/definitions/models.Kubernetes"
                         }
                     }
                 ],
@@ -64,7 +64,7 @@
                 "tags": [
                     "install kubernetes slave"
                 ],
-                "summary": "install kubernets slave",
+                "summary": "install kubernetes slave",
                 "parameters": [
                     {
                         "description": "install kubernetes slave",
@@ -72,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.InstallSlaveParam"
+                            "$ref": "#/definitions/models.KubernetesSlave"
                         }
                     }
                 ],
@@ -95,11 +95,9 @@
                     "type": "object"
                 },
                 "resMsg": {
-                    "description": "根据Accept-Language指定 语言类型，返回详细错误信息中英文，或success",
                     "type": "object"
                 },
                 "status": {
-                    "description": "0 或 对应事件错误码",
                     "type": "integer"
                 }
             }
@@ -127,7 +125,7 @@
                 }
             }
         },
-        "models.InstallKubernetesParameter": {
+        "models.Kubernetes": {
             "type": "object",
             "required": [
                 "clusterName",
@@ -169,12 +167,15 @@
                 "serviceCidr": {
                     "type": "string"
                 },
+                "uid": {
+                    "type": "string"
+                },
                 "version": {
                     "type": "string"
                 }
             }
         },
-        "models.InstallSlaveParam": {
+        "models.KubernetesSlave": {
             "type": "object",
             "properties": {
                 "joinSlaveCommand": {
